[package]
name = "tdui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29", features = ["widget-calendar"] }
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
time = "0.3"
tui-big-text = "0.7"
